--- a/feladat.html
+++ b/feladat.html
@@ -347,3 +347,377 @@ Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
 Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
 Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
 Netherlands_StroopwafelInvasionInOspel, <b>updated</b>, 84, <a href="https://www.munzee.com/map/u1h5gdgny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_StroopwafelInvasionInOspel.json" target="_blank">json</a><br />
+UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
+Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
+Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
+Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
+Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
+Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
+USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
+USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
+Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
+USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
+Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
+USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
+Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
+Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
+Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
+USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
+USA_MHQBash4Casino kihagyva (100%), <br />
+USA_MHQV4Pin kihagyva (100%), <br />
+USA_ZeeKnight, not updated, 0.0<br />
+USA_MichaelMyersHalloween, not updated, 0.0<br />
+USA_MunzeeLogoHistory2011, not updated, 0.0<br />
+USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
+USA_MunzeeLogoHistory2014, not updated, 0.0<br />
+USA_MunzeeLogoHistory2015, not updated, 0.0<br />
+USA_PiratesFlag kihagyva (100%), <br />
+USA_Zelda, not updated, 0.0<br />
+USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
+Germany_FBombBerlin kihagyva (100%), <br />
+Hungary_FBombBudapest kihagyva (100%), <br />
+USA_FBombCedarRapids kihagyva (100%), <br />
+Denmark_FBombHammel kihagyva (100%), <br />
+USA_FBombMcKinney kihagyva (100%), <br />
+USA_FBombTampa kihagyva (100%), <br />
+USA_RoverPin, not updated, 0.0<br />
+USA_EmeraldInAnchorage kihagyva (100%), <br />
+USA_EmeraldInChesterfield kihagyva (100%), <br />
+USA_EmeraldInMcKinney kihagyva (100%), <br />
+Australia_EmeraldInMelbourne kihagyva (100%), <br />
+UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
+Australia_EmeraldInSydney kihagyva (100%), <br />
+BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
+Serbia_JapanseMaple kihagyva (100%), <br />
+Greece_TheLighthouseOfChania kihagyva (100%), <br />
+Jersey_JerzeeClan, not updated, 0.0<br />
+Jersey_JerseyColorPaw, not updated, 0.0<br />
+Jersey_StOuen kihagyva (100%), <br />
+Portugal_MadeiraMonumental kihagyva (100%), <br />
+Portugal_LargoDaPaz kihagyva (100%), <br />
+Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
+Portugal_Portinho kihagyva (100%), <br />
+Croatia_CroatiaLocketHeart, not updated, 0.0<br />
+Greece_Zakynthos, not updated, 0.0<br />
+Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
+Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
+Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
+UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
+France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
+Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
+USA_MOAChristmasCard kihagyva (100%), <br />
+Germany_AreYouXZeePerienced, not updated, 0.6400000000000006<br />
+Germany_MixedGardenRT kihagyva (100%), <br />
+Germany_AppenzellerSennenhundRT, not updated, 0.25<br />
+Germany_PatchworkRT, not updated, 0.44999999999999574<br />
+Germany_FlatsAppenzellerRT, not updated, 0.4399999999999977<br />
+Germany_WeddingDay kihagyva (100%), <br />
+Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
+Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
+Germany_Peace, not updated, 0.0<br />
+Germany_PatchworkDusslingen, not updated, 0.0<br />
+USA_MunzeeMania2019, not updated, 0.0<br />
+USA_MOADwarfLeprechaun kihagyva (100%), <br />
+USA_MOAPenguin kihagyva (100%), <br />
+USA_MOANutcracker kihagyva (100%), <br />
+USA_IceCreamEagan kihagyva (100%), <br />
+Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
+USA_SuperChuckerShield kihagyva (100%), <br />
+USA_DogDaysOfSummer kihagyva (100%), <br />
+USA_GingerbreadMan_Edina kihagyva (100%), <br />
+USA_NEOneAlien, not updated, 0.9100000000000108<br />
+USA_ComoEvoFlowers kihagyva (100%), <br />
+USA_WitchHat, not updated, 0.0<br />
+USA_LRTEVOTrain, not updated, 0.0<br />
+USA_JackOZEEacula kihagyva (100%), <br />
+USA_Minnesota kihagyva (100%), <br />
+USA_MinnesotaMoose kihagyva (100%), <br />
+USA_ChristmasSnowman kihagyva (100%), <br />
+USA_MOAYeti kihagyva (100%), <br />
+USA_MOAFlower kihagyva (100%), <br />
+USA_MOAElectricMonster kihagyva (100%), <br />
+Lithuania_VirusBomb, not updated, 0.0<br />
+Lithuania_KaisiadorysHammer kihagyva (100%), <br />
+Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
+Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
+Lithuania_BalticWay30 kihagyva (100%), <br />
+Austria_FrauenkirchenOwl, not updated, 0.0<br />
+Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
+Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
+Lithuania_KaunasScatter1 kihagyva (100%), <br />
+Lithuania_KaunasScatter2, not updated, 0.0<br />
+Lithuania_KaunasLightning, not updated, 0.0<br />
+Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
+Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
+Lithuania_KaunasMagnet, not updated, 0.35999999999999943<br />
+Lithuania_FebruaryEvent, not updated, 0.0<br />
+USA_TheLuckyFungi kihagyva (100%), <br />
+USA_SunAndMoon, not updated, 0.0<br />
+USA_LexingtonSurprise, not updated, 0.0<br />
+Australia_BrisbaneHeartPopUp kihagyva (100%), <br />
+Australia_QldJacaranda kihagyva (100%), <br />
+Australia_FairyWren kihagyva (100%), <br />
+Germany_BerlinCardsPin kihagyva (100%), <br />
+Germany_Pretzel kihagyva (100%), <br />
+Germany_AdventurePortal2, not updated, 0.0<br />
+Germany_BerlinVoidMapleChess, not updated, 0.0<br />
+Germany_SweetHeart kihagyva (100%), <br />
+Germany_WittenauerMischMasch, not updated, 0.0<br />
+Germany_BerlinBYOG2020 kihagyva (100%), <br />
+Germany_MarzahnerBockwindmuhle kihagyva (100%), <br />
+Germany_GermanHeart kihagyva (100%), <br />
+Australia_RUMportal kihagyva (100%), <br />
+Australia_MiniPortal1 kihagyva (100%), <br />
+Denmark_MiniPortal2 kihagyva (100%), <br />
+Germany_MattPin kihagyva (100%), <br />
+Germany_CrossbowShield kihagyva (100%), <br />
+Germany_FlatLouPin kihagyva (100%), <br />
+Germany_FlatHammockPin kihagyva (100%), <br />
+Germany_FlatRobPin kihagyva (100%), <br />
+Germany_CrossbowPin kihagyva (100%), <br />
+Germany_MysteryPin kihagyva (100%), <br />
+Germany_GreeniePin kihagyva (100%), <br />
+Germany_SperenbergTeddy kihagyva (100%), <br />
+Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
+Germany_ErnieInVolksdorf, not updated, 0.0<br />
+Germany_Quietscheentchen kihagyva (100%), <br />
+Germany_Hammaburg, not updated, 0.0<br />
+Germany_FCStPauli, not updated, 0.730000000000004<br />
+Germany_YinYangNeustadt, not updated, 0.0<br />
+Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
+Denmark_SoparkenMaribo kihagyva (100%), <br />
+Denmark_NonneMaribo kihagyva (100%), <br />
+Denmark_ZeecretSundby kihagyva (100%), <br />
+Denmark_FjerNykobing, not updated, 0.39000000000000057<br />
+Denmark_SpejdernesLejr2022, not updated, 0.0<br />
+Denmark_JuletraeIViby kihagyva (100%), <br />
+Denmark_ZeecretViby kihagyva (100%), <br />
+Denmark_NVGogglesSoro kihagyva (100%), <br />
+Denmark_ZeecretFrederiksberg kihagyva (100%), <br />
+Denmark_DetSpogerIHaslev kihagyva (100%), <br />
+Denmark_ZeecretFensmark kihagyva (100%), <br />
+Denmark_FlatFensmark kihagyva (100%), <br />
+Denmark_ZeecretAppenaes kihagyva (100%), <br />
+Denmark_ZeecretHilleroed kihagyva (100%), <br />
+Denmark_FlatSquare kihagyva (100%), <br />
+USA_HotelEvo kihagyva (100%), <br />
+USA_Emoji, not updated, 0.0<br />
+USA_ElectricJHawk, not updated, 0.1700000000000017<br />
+USA_DesMoinesGreetingCards, not updated, -13.670000000000002<br />
+USA_KCNightLights1 kihagyva (100%), <br />
+USA_KCNightLights2 kihagyva (100%), <br />
+USA_KCNightLights3 kihagyva (100%), <br />
+USA_KCNightLights4 kihagyva (100%), <br />
+USA_KCNightLights5 kihagyva (100%), <br />
+USA_KansasCityPanda, not updated, 0.0<br />
+USA_ResearchHospital kihagyva (100%), <br />
+USA_KCAmericanFlag kihagyva (100%), <br />
+USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
+USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
+USA_Marion kihagyva (100%), <br />
+USA_Dragonfly, not updated, 0.0<br />
+USA_ElectricalEvolution, not updated, 0.0<br />
+USA_CFPumpkin, not updated, 0.0<br />
+USA_Marion4LeafClover kihagyva (100%), <br />
+USA_Popcorn, not updated, 0.0<br />
+USA_UnofficialCREvo, not updated, 0.0<br />
+USA_CRElectricMystery kihagyva (100%), <br />
+USA_CRHolidayPizza kihagyva (100%), <br />
+USA_CRRose kihagyva (100%), <br />
+USA_CRHonorCross kihagyva (100%), <br />
+USA_WatertownShammy kihagyva (100%), <br />
+USA_CatapultPit kihagyva (100%), <br />
+USA_Crossbow, not updated, 0.0<br />
+USA_BowlingBash kihagyva (100%), <br />
+USA_AtlanticDuck, not updated, 0.0<br />
+USA_80sCube kihagyva (100%), <br />
+USA_CRSubmarine kihagyva (100%), <br />
+USA_IowaVeteransCemetery, not updated, 0.0<br />
+USA_SchildbergsDuckWalk kihagyva (100%), <br />
+USA_CRVegetable kihagyva (100%), <br />
+USA_CedarRapidsBarnyard kihagyva (100%), <br />
+UnitedKingdom_JanuaryGarden2022 kihagyva (100%), <br />
+USA_CRFarmersField kihagyva (100%), <br />
+USA_CRMuscleCar kihagyva (100%), <br />
+USA_JacobLLoosePark kihagyva (100%), <br />
+USA_CRSafari kihagyva (100%), <br />
+USA_CRApril kihagyva (100%), <br />
+USA_PicassoRob kihagyva (100%), <br />
+USA_CRFlatMattLovesBaseball kihagyva (100%), <br />
+USA_FlatRobBirthday kihagyva (100%), <br />
+USA_WestDesMoinesPacMan, not updated, 0.0<br />
+USA_CRFeather kihagyva (100%), <br />
+USA_BlackCat kihagyva (100%), <br />
+USA_CRJonesParkBirthday7 kihagyva (100%), <br />
+USA_NoelridgeMystery kihagyva (100%), <br />
+USA_WestDesMoinesStrawberry, not updated, 0.0<br />
+USA_WestDesMoinesShark, not updated, 0.0<br />
+USA_AltoonaEvos, not updated, 0.6899999999999977<br />
+USA_DSMHalloweenWitch, not updated, 0.0<br />
+USA_CRFrankenstein, not updated, 0.0<br />
+USA_ThomasParkFlats kihagyva (100%), <br />
+USA_IowaGoldfinch kihagyva (100%), <br />
+USA_Minion kihagyva (100%), <br />
+USA_FarmingtonTiger, not updated, 0.0<br />
+USA_CedarRapidsPumpkin kihagyva (100%), <br />
+USA_PuppyPlayPen, not updated, 0.0<br />
+USA_Burger kihagyva (100%), <br />
+USA_Pizza kihagyva (100%), <br />
+USA_StormtrooperSavage kihagyva (100%), <br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+Denmark_AnimalFarmHilleroed, not updated, 0.0<br />
+Denmark_EvolutionparkInRoskilde, not updated, 1.0<br />
+Denmark_ChristmastreeInHilleroed kihagyva (100%), <br />
+Denmark_Drikkehorn kihagyva (100%), <br />
+Denmark_FCMidtjylland, not updated, 0.0<br />
+Denmark_RandersRegnskov, not updated, 0.4000000000000057<br />
+Denmark_RandersSnowy, not updated, 0.0<br />
+Denmark_SonicRanders, not updated, 0.0<br />
+Denmark_FlatHammel kihagyva (100%), <br />
+Denmark_GrenaaAmethyst kihagyva (100%), <br />
+Denmark_GrenaaBigAmethyst kihagyva (100%), <br />
+Denmark_GrenaaFerry kihagyva (100%), <br />
+Denmark_GrenaaSapphireAndAmethyst kihagyva (100%), <br />
+Denmark_HeartOfValentine kihagyva (100%), <br />
+Denmark_Evolution2019Hammel, not updated, 0.0<br />
+Denmark_NextStopTilst kihagyva (100%), <br />
+Denmark_SilkeborgMario kihagyva (100%), <br />
+Denmark_TranbjergButterfly kihagyva (100%), <br />
+Denmark_TrueForestFish kihagyva (100%), <br />
+Denmark_TrueForestSurprise kihagyva (100%), <br />
+Denmark_AppleInAarhus kihagyva (100%), <br />
+Denmark_GardenOfJewels kihagyva (100%), <br />
+Denmark_OnyxCitrineParkInHammel kihagyva (100%), <br />
+Denmark_SilkeborgCoatOfArms kihagyva (100%), <br />
+Denmark_SilkeborgRainbowUnicorn kihagyva (100%), <br />
+Denmark_SilkeborgHexagon kihagyva (100%), <br />
+Denmark_SilkeborgOwl kihagyva (100%), <br />
+Denmark_SilkeborgNightOwl kihagyva (100%), <br />
+Denmark_GrenaaHeart2022 kihagyva (100%), <br />
+UnitedKingdom_PegasusLure, not updated, 0.0<br />
+USA_ValentineHeartCapeCanaveral kihagyva (100%), <br />
+UnitedKingdom_RIPQueenElizabethIICrown kihagyva (100%), <br />
+UnitedKingdom_ChallockChimp, not updated, 0.0<br />
+UnitedKingdom_LittleBurtonApple, not updated, 0.0<br />
+UnitedKingdom_AshfordKentClanWars, not updated, 0.0<br />
+UnitedKingdom_AshfordVariety kihagyva (100%), <br />
+UnitedKingdom_ShoeburyVirtuals, not updated, 0.0<br />
+UnitedKingdom_SCGVirtualField, not updated, 0.0<br />
+UnitedKingdom_KentQueensCrown kihagyva (100%), <br />
+UnitedKingdom_EvoPlusGarden kihagyva (100%), <br />
+UnitedKingdom_Nipper kihagyva (100%), <br />
+UnitedKingdom_HayesRainbow kihagyva (100%), <br />
+UnitedKingdom_UnionJack kihagyva (100%), <br />
+UnitedKingdom_SunnyRainbow kihagyva (100%), <br />
+UnitedKingdom_MaattmoosMoo kihagyva (100%), <br />
+UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
+UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
+UnitedKingdom_RainbowHeart kihagyva (100%), <br />
+UnitedKingdom_CanterburyVictoriaPark kihagyva (100%), <br />
+UnitedKingdom_MrKnowItOwl, not updated, 0.0<br />
+UnitedKingdom_ChristmasGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_InMemoryOfPam kihagyva (100%), <br />
+UnitedKingdom_LittleLotties1st, not updated, 0.0<br />
+UnitedKingdom_SuperpeggysVirtual, not updated, 0.0<br />
+UnitedKingdom_HelpForHingham, not updated, 0.0<br />
+UnitedKingdom_NotRudolph, not updated, 0.0<br />
+UnitedKingdom_MadHatter, not updated, 0.0<br />
+UnitedKingdom_NVG kihagyva (100%), <br />
+UnitedKingdom_EveryColour kihagyva (100%), <br />
+UnitedKingdom_NaomisSloth kihagyva (100%), <br />
+UnitedKingdom_VirtualJewels, not updated, 0.0<br />
+UnitedKingdom_WorsteadForNorkie kihagyva (100%), <br />
+UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
+UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
+UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
+UnitedKingdom_SheringhamJewelSquare, not updated, 0.0<br />
+UnitedKingdom_IceCreamCone, not updated, 0.0<br />
+UnitedKingdom_VirtualLove, not updated, 0.0<br />
+UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
+UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
+UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
+UnitedKingdom_HMSVictory, not updated, 0.0<br />
+UnitedKingdom_RetroBunzee kihagyva (100%), <br />
+UnitedKingdom_DenverWindmill kihagyva (100%), <br />
+Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
+Australia_GattonArrowsArrow1 kihagyva (100%), <br />
+Australia_GattonArrowsArrow2, not updated, 0.0<br />
+Australia_GattonArrowsArrow3, not updated, 0.0<br />
+Australia_GattonArrowsArrow4, not updated, 0.0<br />
+Australia_GattonArrowsArrow5, not updated, 0.0<br />
+Australia_BeeJewelled kihagyva (100%), <br />
+Australia_SoonBeeSpring kihagyva (100%), <br />
+Australia_WeBeePawns kihagyva (100%), <br />
+Australia_BeeFlats kihagyva (100%), <br />
+Australia_BeeQueen kihagyva (100%), <br />
+Australia_BeeTree kihagyva (100%), <br />
+Australia_BeeLucky kihagyva (100%), <br />
+Australia_HereBeeZodiacs kihagyva (100%), <br />
+Australia_FlatterBee kihagyva (100%), <br />
+Australia_Honeycomb kihagyva (100%), <br />
+Australia_TwoBeeOrKnot, not updated, 0.0<br />
+Australia_HoneyDipper kihagyva (100%), <br />
+Australia_LaidleyBees kihagyva (100%), <br />
+Australia_RUMbleBee kihagyva (100%), <br />
+Australia_FlatsFlyAKite kihagyva (100%), <br />
+Australia_SouthernCrossKite kihagyva (100%), <br />
+Australia_ToowoombaRose, not updated, 0.0<br />
+Australia_SnowBeeMelting kihagyva (100%), <br />
+USA_CelticSnake, not updated, 0.0<br />
+Australia_AE2Submarine kihagyva (100%), <br />
+Australia_AussiePossum kihagyva (100%), <br />
+USA_ArizonaCactus kihagyva (100%), <br />
+UnitedKingdom_BournemouthBeachHuts kihagyva (100%), <br />
+Australia_CarsBoysFirstCar kihagyva (100%), <br />
+Australia_CasinoLuckyStar kihagyva (100%), <br />
+UnitedKingdom_CazmosCelebrationGarden kihagyva (100%), <br />
+Australia_CrocOfMunzees kihagyva (100%), <br />
+UnitedKingdom_CuppaCazmo kihagyva (100%), <br />
+Australia_DroughtAngel kihagyva (100%), <br />
+Australia_EmuInCanberra kihagyva (100%), <br />
+UnitedKingdom_FlatFlying kihagyva (100%), <br />
+UnitedKingdom_FlatSledding kihagyva (100%), <br />
+Australia_GoldCoastGhost kihagyva (100%), <br />
+UnitedKingdom_Greenman kihagyva (100%), <br />
+Australia_HauntedHouse kihagyva (100%), <br />
+USA_HorsingAroundAggieland kihagyva (100%), <br />
+USA_Julbock kihagyva (100%), <br />
+USA_ReindeerInKentucky kihagyva (100%), <br />
+Australia_LismorePie kihagyva (100%), <br />
+USA_LostGoldenJellyfish kihagyva (100%), <br />
+UnitedKingdom_LostJellyfishInBournemouth kihagyva (100%), <br />
+USA_LostPBJellyfishInRogers kihagyva (100%), <br />
+UnitedKingdom_LostTurtleInFerndown kihagyva (100%), <br />
+Australia_MawsonLakesDHSTape kihagyva (100%), <br />
+UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
+UnitedKingdom_Pompey kihagyva (100%), <br />
+UnitedKingdom_QueensBaton, <b>updated</b>, 119, <a href="https://www.munzee.com/map/u10uq9cxd/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_QueensBaton.json" target="_blank">json</a> <b>100%</b><br />
